// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "plone-frontend-deployment-c88bcfaf",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "plone-frontend-deployment-c8d95ffb",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "plone-frontend-deployment-c8d95ffb",
          },
        },
        "spec": {
          "containers": [
            {
              "image": "plone/plone-backend:latest",
              "name": "deployment-container",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "plone-frontend-service-c8d6d7d9",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 3000,
          "targetPort": 3000,
        },
      ],
      "selector": {
        "app": "plone-frontend-deployment-c8d95ffb",
      },
      "type": "ClusterIP",
    },
  },
]
`;

exports[`defaults-with-pdp 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "plone-frontend_with_pdb-deployment-c84d7c2b",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "plone-frontend_with_pdb-deployment-c8256934",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "plone-frontend_with_pdb-deployment-c8256934",
          },
        },
        "spec": {
          "containers": [
            {
              "image": "plone/plone-backend:latest",
              "name": "deployment-container",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "name": "plone-frontend_with_pdb-deployment-pdb-c8993f39",
    },
    "spec": {
      "minAvailable": 1,
      "selector": {
        "matchLabels": {
          "app": "plone-frontend_with_pdb-deployment-c8256934",
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "plone-frontend_with_pdb-service-c88fbf72",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 3000,
          "targetPort": 3000,
        },
      ],
      "selector": {
        "app": "plone-frontend_with_pdb-deployment-c8256934",
      },
      "type": "ClusterIP",
    },
  },
]
`;
